--- a/templates/contact.html
+++ b/templates/contact.html
@@ -6,21 +6,21 @@
 
 <div class="d2" >    
     <fieldset class="f1">
-        <legend class="font-effect-neon text-center">CONTACT DETAILS</legend>
+        <legend class="font-effect-neon text-center">Contact Details</legend>
         <div id="id1"><i id="id2" class="fas fa-map-marker-alt fa-2x" style="color: red;"></i>
-            <div class="com_div"> Jamnagar, GUJARAT.</div>
+            <div class="com_div"> VisakhaPatnam, AndhraPradesh.</div>
         </div>
         <div id="id1"><i id="id2" class="fas fa-envelope fa-2x" style="color: white;"></i>
-            <div class="com_div"> kanzariyasandip300@gmail.com</div>
+            <div class="com_div"> saitejachitrapu44@gmail.com</div>
         </div>
         <div id="id1"><i id="id2" class="fas fa-clock fa-2x" style="color: silver;"></i>
             <div class="com_div"> 10 AM - 5 PM</div>
         </div>
         <div id="id1"><i id="id2" class="fab fa-linkedin fa-2x" style="color: blue;"></i>
-            <a href="https://www.linkedin.com/in/sandip-kanzariya-8416b523a/" target="_blank" class="com_div">Sandip Kanzariya</a>
+            <a href="https://www.linkedin.com" target="_blank" class="com_div">Sandip Kanzariya</a>
         </div>
         <div id="id1"><i id="id2" class="fab fa-twitter fa-2x" style="color: blue;"></i>
-            <a href="https://twitter.com/SANDIP_K_A" target="_blank" class="com_div">Sandip Kanzariya</a>
+            <a href="https://twitter.com" target="_blank" class="com_div">Sandip Kanzariya</a>
         </div>
     </fieldset>
 </div>
