--- a/templates/contact.html
+++ b/templates/contact.html
@@ -17,10 +17,10 @@
             <div class="com_div"> 10 AM - 5 PM</div>
         </div>
         <div id="id1"><i id="id2" class="fab fa-linkedin fa-2x" style="color: blue;"></i>
-            <a href="https://www.linkedin.com" target="_blank" class="com_div">Sandip Kanzariya</a>
+            <a href="https://www.linkedin.com" target="_blank" class="com_div">SaiTeja</a>
         </div>
         <div id="id1"><i id="id2" class="fab fa-twitter fa-2x" style="color: blue;"></i>
-            <a href="https://twitter.com" target="_blank" class="com_div">Sandip Kanzariya</a>
+            <a href="https://twitter.com" target="_blank" class="com_div">SaiTeja</a>
         </div>
     </fieldset>
 </div>
