--- a/templates/basic.html
+++ b/templates/basic.html
@@ -104,9 +104,9 @@
 <body>
     <!--Header Section starts here-->
     <div class="container-fluid px-0">
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary font-weight-bold">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-warning font-weight-bold">
             <a class="navbar-brand text-bold bg-black " href="/"><b>Hotel </b><i class="fas fa-hotel text-warning"></i>
-                <b>Broomk</b></a>
+                <b>Canvas</b></a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
