--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,5 @@
     {% extends 'basic.html' %}
-    {% block title %}Hotel Broomk
+    {% block title %}Hotel Canvas
     {% endblock title %}
     {% block body %}
      <!--Booking Section starts here-->
